# thread-local

./: .gitignore  LICENSE  stack.yaml  thread-local.cabal
example/: Main.hs
polysemy-state-tls/: polysemy-state-tls.cabal
polysemy-state-tls/src/Polysemy/State/: TLS.hs
src/Control/Concurrent/: ThreadLocal.hs
src/Control/Concurrent/ThreadLocal/: Internal.hs  Unsafe.hs
thread-local/: thread-local.cabal
thread-local/example/: Main.hs
thread-local/src/Control/Concurrent/: ThreadLocal.hs
thread-local/src/Control/Concurrent/ThreadLocal/: GC.hs  Internal.hs
