cabal-version:      3.0
name:               polysemy-state-tls
version:            0.1
synopsis:           Thread local state interpreter for Polysemy
-- description:
license:            MIT
license-file:       LICENSE
author:             Nick
maintainer:         nick@typeable.io
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Polysemy.State.TLS
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.14 && < 5,
                      thread-local,
                      polysemy >= 1.7 && < 1.10
    hs-source-dirs:   src
    default-language: Haskell2010
