cabal-version:      3.0
name:               thread-local
version:            0.1
synopsis:           Thread local storage 
-- description:
license:            MIT
license-file:       LICENSE
author:             Nick
maintainer:         nick@typeable.io
-- copyright:
category:           Control
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Control.Concurrent.ThreadLocal
    other-modules:    Control.Concurrent.ThreadLocal.GC
                      Control.Concurrent.ThreadLocal.Internal
    build-depends:    base >=4.16 && < 5,
                      async >= 2.2,
                      containers >= 0.6,
                      witherable
    hs-source-dirs:   src
    default-language: Haskell2010

executable example
    import:           warnings
    Main-Is:          Main.hs
    build-depends:    base >= 4.16 && < 5,
                      async,
                      thread-local,
                      random
    hs-source-dirs:   example
    default-language: Haskell2010
